[gd_scene load_steps=3 format=3 uid="uid://bj80dbx3uve3d"]

[ext_resource type="Script" path="res://systems/pause_menu.gd" id="1_2f2mg"]
[ext_resource type="FontFile" uid="uid://cjf4ibtowb70s" path="res://Dialogue/fonts/MEGAMAN10.ttf" id="1_448sd"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_2f2mg")

[node name="ReferenceRect" type="ReferenceRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -211.5
offset_top = -315.0
offset_right = 211.5
offset_bottom = 315.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="ReferenceRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="ReferenceRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="ReferenceRect/MarginContainer"]
layout_mode = 2

[node name="Restart button" type="Button" parent="ReferenceRect/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("1_448sd")
theme_override_font_sizes/font_size = 32
text = "RESTART LEVEL"

[node name="Main Menu Button" type="Button" parent="ReferenceRect/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("1_448sd")
theme_override_font_sizes/font_size = 32
text = "MAIN MENU"

[node name="Panel" type="Panel" parent="ReferenceRect/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.38

[node name="PanelContainer" type="MarginContainer" parent="ReferenceRect/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="ReferenceRect/MarginContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="BGM_text" type="Label" parent="ReferenceRect/MarginContainer/VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.43134, 0.43134, 0.43134, 1)
theme_override_fonts/font = ExtResource("1_448sd")
theme_override_font_sizes/font_size = 32
text = "BGM VOLUME"
horizontal_alignment = 1

[node name="HSlider" type="HSlider" parent="ReferenceRect/MarginContainer/VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
value = 80.0

[node name="SFX_text" type="Label" parent="ReferenceRect/MarginContainer/VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.43134, 0.43134, 0.43134, 1)
theme_override_fonts/font = ExtResource("1_448sd")
theme_override_font_sizes/font_size = 32
text = "SFX VOLUME"
horizontal_alignment = 1

[node name="HSlider2" type="HSlider" parent="ReferenceRect/MarginContainer/VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
value = 80.0

[node name="Panel2" type="Panel" parent="ReferenceRect/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.38

[node name="ResumeButton" type="Button" parent="ReferenceRect/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("1_448sd")
theme_override_font_sizes/font_size = 32
text = "RESUME"

[connection signal="pressed" from="ReferenceRect/MarginContainer/VBoxContainer/Restart button" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="ReferenceRect/MarginContainer/VBoxContainer/Main Menu Button" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="ReferenceRect/MarginContainer/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
